--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc -w"
+    "dev": "tsc -w",
+    "test": "jest"
   },
   "keywords": [],
   "include": [
@@ -14,6 +14,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@comunica/types": "^2.10.0",
+    "@types/jest": "^29.5.11",
+    "@types/jquery": "^3.5.29",
+    "rdf-js": "^4.0.2",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
   },
   "dependencies": {
