--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "validation-monitoring-module",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "main": "index.js",
+  "files": [
+    "dist/**/*"
+  ],
   "scripts": {
     "dev": "tsc -w",
     "test": "jest"
