--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "validation-monitoring-module",
-  "version": "1.0.10-2",
+  "version": "1.0.13",
   "description": "",
   "module": "dist/index.esm.js",
   "main": "dist/index.js",
