--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es2015",
-    "module": "commonjs",
     "strict": true,
-    "outDir": "./dist"
+    "noImplicitAny": true,
+    "esModuleInterop": true,
+    "strictNullChecks": true,
+    "target": "ES2022",
+    "moduleResolution": "Node10",
+    "module": "CommonJS",
+    "declaration": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "outDir": "dist"
   },
-  "include": ["./src/**/*.ts"],
-  "exclude": ["node_modules", "./src/tests/**/*"]
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
