--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "validation-monitoring-module",
-  "version": "1.0.29",
+  "name": "validation-monitoring-module-test",
+  "version": "1.0.2",
   "description": "",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -11,7 +11,8 @@
     "build": "tsc",
     "test": "jest",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "tslint -p tsconfig.json"
+    "lint": "tslint -p tsconfig.json",
+    "prepublish": "tsc"
   },
   "keywords": [],
   "include": [
