--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
   ],
   "devDependencies": {
     "@comunica/types": "^2.10.0",
-    "@types/jest": "^29.5.11",
+    "@types/jest": "^29.5.12",
     "@types/jquery": "^3.5.29",
     "esbuild": "^0.20.0",
     "esbuild-plugin-tsc": "^0.4.0",
+    "jest": "^29.7.0",
     "npm-dts": "^1.3.12",
     "prettier": "^3.2.5",
     "rdf-js": "^4.0.2",
