--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "validation-monitoring-module-test",
-  "version": "1.0.8",
+  "name": "app-validation-tool",
+  "version": "1.0.10",
   "description": "This module is used to validate publications in the context of the Flemish government.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -30,17 +30,20 @@
     "esbuild": "^0.20.0",
     "esbuild-plugin-tsc": "^0.4.0",
     "jest": "^29.7.0",
+    "node-polyfill-webpack-plugin": "^3.0.0",
     "npm-dts": "^1.3.12",
     "prettier": "^3.2.5",
     "rdf-js": "^4.0.2",
     "ts-jest": "^29.1.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@comunica/actor-http-proxy": "^3.0.3",
     "@comunica/query-sparql": "^3.0.3",
+    "html-dom-parser": "^5.0.8",
     "jsdom": "^24.0.0",
     "n3": "^1.17.3",
     "tsup": "^8.0.2"
