update package name in package.json

--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "validation-monitoring-module-test",
+  "name": "validation-module",
   "version": "1.0.3",
   "description": "This module is used to validate publications in the context of the Flemish government.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "license": "MIT",
   "author": "Senne Bels <sennebels@gmail.com> (https://sennebels.xyz)",
-  "contributors": ["Lenny Bontenakel"],
-  "files": ["/dist"],
+  "contributors": [
+    "Lenny Bontenakel"
+  ],
+  "files": [
+    "/dist"
+  ],
   "scripts": {
     "build": "tsup",
     "test": "jest",
@@ -26,10 +30,14 @@
         }
       ]
     ],
-    "plugins": ["add-module-exports"]
+    "plugins": [
+      "add-module-exports"
+    ]
   },
   "keywords": [],
-  "include": ["src/**/*"],
+  "include": [
+    "src/**/*"
+  ],
   "devDependencies": {
     "@comunica/types": "^2.10.0",
     "@types/jest": "^29.5.11",
