--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
   "dependencies": {
     "@comunica/actor-http-proxy": "^3.0.3",
     "@comunica/query-sparql": "^3.0.3",
+    "dom-serializer": "^2.0.0",
     "domutils": "^3.1.0",
     "html-dom-parser": "^5.0.8",
-    "jsdom": "^24.0.0",
     "n3": "^1.17.3",
     "tsup": "^8.0.2"
   }
