--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/jquery": "^3.5.29",
     "esbuild": "^0.20.0",
     "esbuild-plugin-tsc": "^0.4.0",
+    "http-request-mock": "^1.8.19",
     "npm-dts": "^1.3.12",
     "prettier": "^3.2.5",
     "rdf-js": "^4.0.2",
@@ -40,6 +41,7 @@
   "dependencies": {
     "@comunica/actor-http-proxy": "^2.10.2",
     "@comunica/query-sparql": "^2.10.2",
+    "lib-decision-shapes": "^0.0.5",
     "tsup": "^8.0.2"
   }
 }
