moved test folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,9 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "declaration": true,            
+    "declaration": true,
     "outDir": "./dist"
   },
   "include": ["./src/**/*.ts"],
-  "exclude": ["node_modules", "dist", "./src/tests/**/*"]
+  "exclude": ["node_modules", "dist", "tests/**/*"]
 }
