--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "tsup",
     "test": "jest",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "tslint -p tsconfig.json",
+    "lint:js": "eslint . --cache",
+    "lint:js:fix": "eslint . --fix",
     "prepublish": "tsc"
   },
   "keywords": [],
@@ -25,10 +26,15 @@
   ],
   "devDependencies": {
     "@comunica/types": "^3.1.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.5.0",
     "@types/jest": "^29.5.12",
     "@types/jquery": "^3.5.29",
     "esbuild": "^0.20.0",
     "esbuild-plugin-tsc": "^0.4.0",
+    "eslint-plugin-n": "^17.9.0",
+    "eslint-plugin-qunit": "^8.1.1",
+    "globals": "^15.6.0",
     "http-request-mock": "^1.8.19",
     "jest": "^29.7.0",
     "npm-dts": "^1.3.12",
@@ -44,9 +50,11 @@
     "@comunica/query-sparql": "^3.0.3",
     "dom-serializer": "^2.0.0",
     "domutils": "^3.1.0",
+    "eslint": "^9.5.0",
     "html-dom-parser": "^5.0.8",
     "lib-decision-shapes": "^0.0.12",
     "n3": "^1.17.3",
-    "tsup": "^8.0.2"
+    "tsup": "^8.0.2",
+    "typescript-eslint": "^8.0.0-alpha.10"
   }
 }
