--- a/.woodpecker/.verify-pr.yml
+++ b/.woodpecker/.verify-pr.yml
@@ -11,7 +11,7 @@ pipeline:
     image: danlynn/ember-cli:4.4.0
     group: lint
     commands:
-      - npm install -g npm@latest && npm run lint:js
+      - npm run lint:js
   test:
     image: danlynn/ember-cli:4.4.0
     commands:
