--- a/.woodpecker/.verify-pr.yml
+++ b/.woodpecker/.verify-pr.yml
@@ -1,24 +1,17 @@
 pipeline:
   install:
-    image: danlynn/ember-cli:4.4.0
-    commands:
+    image: woodpeckerci/plugin-node-pm
+    commands: 
       - npm ci
-  format:
-    image: danlynn/ember-cli:4.4.0
-    commands:
-      - npm run format
-  lint:
-    image: danlynn/ember-cli:4.4.0
-    group: lint
-    commands:
-      - npm run lint:js
-  test:
-    image: danlynn/ember-cli:4.4.0
-    commands:
-      - npm run test || exit 0
-  build:
-    image: danlynn/ember-cli:4.4.0
-    commands:
-      - npm run build
+  verify:
+    image: woodpeckerci/plugin-node-pm
+    settings:
+      run:
+        - format
+        - lint:js
+        - test || exit 0
+        - build # script name
+      frozen_lockfile: true # recommended
+      ignore_node_modules: true # recommended
 when:
   event: pull_request
