fixed linter issues

--- a/.woodpecker/.verify-pr.yml
+++ b/.woodpecker/.verify-pr.yml
@@ -12,7 +12,7 @@ pipeline:
   lint:
     image: woodpeckerci/plugin-node-pm
     commands: 
-      - npm run lint:js
+      - npm run lint
   test:
     image: woodpeckerci/plugin-node-pm
     commands: 
