--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "jest",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
+    "lint:fix": "tslint -p tsconfig.json --fix",
     "prepublish": "tsc"
   },
   "keywords": [],
