--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-validation-tool",
+  "name": "lib-decision-validation",
   "version": "1.0.31",
   "description": "This module is used to validate publications in the context of the Flemish government.",
   "main": "dist/index.js",
