--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@lblod/lib-decision-validation",
   "version": "1.0.31",
+  "publishConfig": {
+    "access": "public"
+  },
   "description": "This module is used to validate publications in the context of the Flemish government.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
