--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lblod/lib-decision-validation",
-  "version": "1.0.34-pre-release",
+  "version": "1.0.38",
   "publishConfig": {
     "access": "public"
   },
@@ -49,7 +49,7 @@
     "dom-serializer": "^2.0.0",
     "domutils": "^3.1.0",
     "html-dom-parser": "^5.0.8",
-    "lib-decision-shapes": "^0.0.16",
+    "@lblod/lib-decision-shapes": "^0.0.20",
     "n3": "^1.17.3",
     "tsup": "^8.0.2"
   }
