--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lblod/lib-decision-validation",
-  "version": "1.0.39-beta.1",
+  "version": "1.0.39",
   "publishConfig": {
     "access": "public"
   },
