--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lblod/lib-decision-validation",
-  "version": "1.0.39",
+  "version": "1.0.40-beta.0",
   "publishConfig": {
     "access": "public"
   },
